Настроена кнопка Settings.